Upgrade to Java 21 and Gradle 8.4 (#236)