@@ -11,8 +11,8 @@ logger.quiet("Gradle version: ${gradle.gradleVersion}")
 
 plugins {
   id("java-library")
-  id("com.diffplug.gradle.spotless") version "6.19.0" apply (false)
-  id("com.github.spotbugs") version "5.0.14" apply (false)
+  id("com.diffplug.gradle.spotless") version "6.22.0" apply (false)
+  id("com.github.spotbugs") version "5.1.5" apply (false)
   id("com.asarkar.gradle.build-time-tracker") version "4.3.0"
 }
 
@@ -26,8 +26,8 @@ allprojects {
 subprojects {
   apply(plugin = "java")
   configure<JavaPluginExtension> {
-    sourceCompatibility = JavaVersion.VERSION_19
-    targetCompatibility = JavaVersion.VERSION_19
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
   }
 
   apply(plugin = "com.diffplug.spotless")
@@ -89,7 +89,7 @@ subprojects {
     }
   }
 
-  val previewFeatures = listOf("--enable-preview")
+  val previewFeatures = emptyList<String>()
   tasks.withType<JavaCompile> {
     options.compilerArgs = previewFeatures
   }
